# kochplan

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  mytypes.py
tests/: test_functions.py
